@@ -281,6 +281,11 @@ Instrumentation.prototype.addEndedTransaction = function (transaction) {
     return
   }
 
+  // https://github.com/elastic/apm/blob/main/specs/agents/tracing-sampling.md#non-sampled-transactions
+  if (!transaction.sampled && !agent._transport.supportsKeepingUnsampledTransaction()) {
+    return
+  }
+
   var payload = agent._transactionFilters.process(transaction._encode())
   if (!payload) {
     agent.logger.debug('transaction ignored by filter %o', { trans: transaction.id, trace: transaction.traceId })
